--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -597,3 +597,8 @@ ${email}`);
 </body>
 </html>
 
+git init
+git add .
+git commit -m "Initial commit"
+git remote add origin https://github.com/naddyA5951/index.html
+git push -u origin main
